--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,53 @@
+---
+import { SITE } from '../constants/site.js'
+const { title = SITE.title, description = SITE.description, keywords = SITE.keywords } = Astro.props
+---
+
 <!doctype html>
-<html lang='es'>
+<html lang='es' class='scroll-smooth'>
   <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=5.0' />
+    <title>{title}</title>
+    <meta name='author' content='dambdev' />
+    <meta name='description' content={description} />
+    <meta name='keywords' content={keywords} />
+
+    <meta property='og:type' content='website' />
+    <meta property='og:url' content='https://damb.dev/' />
+    <meta property='og:title' content={title} />
+    <meta property='og:description' content={description} />
+    <meta property='og:image' content='https://damb.dev/social/og.webp' />
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='630' />
+    <meta property='og:image:alt' content='Logo de Dambdev' />
+
+    <meta name='twitter:card' content='summary_large_image' />
+    <meta property='twitter:domain' content='damb.dev' />
+    <meta property='twitter:url' content='https://damb.dev' />
+    <meta name='twitter:title' content={title} />
+    <meta name='twitter:description' content={description} />
+    <meta name='twitter:image' content='https://damb.dev/social/og.webp' />
+    <meta name='twitter:image:alt' content='Logo de Dambdev' />
+
+    <link rel='canonical' href='https://damb.dev/' />
+    <link rel='apple-touch-icon' sizes='180x180' href='/favicons/apple-touch-icon-180x180.png' />
+    <link rel='icon' type='image/png' sizes='32x32' href='/favicons/favicon-32x32.png' />
+    <link rel='icon' type='image/png' sizes='16x16' href='/favicons/favicon-16x16.png' />
+
+    <meta name='msapplication-TileColor' content='#003' />
+    <meta name='msapplication-TileImage' content='/favicons/ms-icon-144x144.png' />
+    <meta name='theme-color' content='#003' />
+    <meta name='color-scheme' content='dark light' />
     <meta name='generator' content={Astro.generator} />
-    <title>Porfolio de dambdev</title>
   </head>
-  <body>
+
+  <body class='text-pretty text-black dark:text-white flex flex-col bg-[#ffe] dark:bg-[#003]'>
+    <div
+      class='absolute top-0 bottom-0 -z-10 min-h-dvh w-full
+      bg-[radial-gradient(125%_125%_at_50%_10%,#ffe_40%,#63e_100%)]
+      dark:bg-[radial-gradient(125%_125%_at_50%_10%,#003_40%,#63e_100%)]'
+    >
+    </div>
     <slot />
   </body>
 </html>
