--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,19 @@
 ---
 import { SITE } from '../constants/site.js'
-const { title = SITE.title, description = SITE.description, keywords = SITE.keywords } = Astro.props
+
+const {
+  title = SITE.title,
+  description = SITE.description,
+  keywords = SITE.keywords,
+  url = SITE.url,
+  domain = SITE.domain
+} = Astro.props
 ---
 
 <!doctype html>
-<html lang='es' class='scroll-smooth'>
+<html lang='es' class='scroll-smooth focus:scroll-auto'>
   <head>
+    <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=5.0' />
     <title>{title}</title>
     <meta name='author' content='dambdev' />
@@ -13,23 +21,24 @@ const { title = SITE.title, description = SITE.description, keywords = SITE.keyw
     <meta name='keywords' content={keywords} />
 
     <meta property='og:type' content='website' />
-    <meta property='og:url' content='https://damb.dev/' />
+    <meta property='og:url' content={url} />
     <meta property='og:title' content={title} />
     <meta property='og:description' content={description} />
-    <meta property='og:image' content='https://damb.dev/social/og.webp' />
+    <meta property='og:image' content={`${url}/social/og.webp`} />
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='630' />
     <meta property='og:image:alt' content='Logo de Dambdev' />
 
     <meta name='twitter:card' content='summary_large_image' />
-    <meta property='twitter:domain' content='damb.dev' />
-    <meta property='twitter:url' content='https://damb.dev' />
+    <meta property='twitter:domain' content={domain} />
+    <meta property='twitter:url' content={url} />
     <meta name='twitter:title' content={title} />
     <meta name='twitter:description' content={description} />
-    <meta name='twitter:image' content='https://damb.dev/social/og.webp' />
+    <meta name='twitter:image' content={`${url}/social/og.webp`} />
     <meta name='twitter:image:alt' content='Logo de Dambdev' />
 
-    <link rel='canonical' href='https://damb.dev/' />
+    <link rel='canonical' href={url} />
+    <link rel='manifest' href='/manifest.json' />
     <link rel='apple-touch-icon' sizes='180x180' href='/favicons/apple-touch-icon-180x180.png' />
     <link rel='icon' type='image/png' sizes='32x32' href='/favicons/favicon-32x32.png' />
     <link rel='icon' type='image/png' sizes='16x16' href='/favicons/favicon-16x16.png' />
