--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import { SITE } from '../constants/site.js'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
 
 const {
   title = SITE.title,
@@ -50,13 +52,13 @@ const {
     <meta name='generator' content={Astro.generator} />
   </head>
 
-  <body class='text-pretty text-black dark:text-white flex flex-col bg-[#ffe] dark:bg-[#003]'>
-    <div
-      class='absolute top-0 bottom-0 -z-10 min-h-dvh w-full
+  <body
+    class='text-pretty text-black dark:text-white flex flex-col min-h-dvh w-full transition-all
       bg-[radial-gradient(125%_125%_at_50%_10%,#ffe_40%,#63e_100%)]
       dark:bg-[radial-gradient(125%_125%_at_50%_10%,#003_40%,#63e_100%)]'
-    >
-    </div>
+  >
+    <Header />
     <slot />
+    <Footer />
   </body>
 </html>
