--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Experience from '../components/Experience.astro'
 import Hero from '../components/Hero.astro'
+import Projects from '../components/Projects.astro'
 import SectionContainer from '../components/SectionContainer.astro'
 import TitleSection from '../components/TitleSection.astro'
 import BriefcaseIcon from '../icons/Briefcase.astro'
+import CodeIcon from '../icons/Code.astro'
 import Layout from '../layouts/Layout.astro'
 import '../styles/global.css'
 ---
@@ -19,6 +21,13 @@ import '../styles/global.css'
         Experiencia técnica
       </TitleSection>
       <Experience />
+    </SectionContainer>
+    <SectionContainer id='proyectos'>
+      <TitleSection>
+        <CodeIcon class='size-8' />
+        Proyectos
+      </TitleSection>
+      <Projects />
     </SectionContainer>
   </main>
 </Layout>
