--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import AboutMe from '../components/AboutMe.astro'
 import Experience from '../components/Experience.astro'
 import Hero from '../components/Hero.astro'
 import Projects from '../components/Projects.astro'
@@ -6,6 +7,7 @@ import SectionContainer from '../components/SectionContainer.astro'
 import TitleSection from '../components/TitleSection.astro'
 import BriefcaseIcon from '../icons/Briefcase.astro'
 import CodeIcon from '../icons/Code.astro'
+import ProfileCheckIcon from '../icons/ProfileCheck.astro'
 import Layout from '../layouts/Layout.astro'
 import '../styles/global.css'
 ---
@@ -28,6 +30,13 @@ import '../styles/global.css'
         Proyectos
       </TitleSection>
       <Projects />
+    </SectionContainer>
+    <SectionContainer id='sobre-mi'>
+      <TitleSection>
+        <ProfileCheckIcon class='size-8' />
+        Sobre mí
+      </TitleSection>
+      <AboutMe />
     </SectionContainer>
   </main>
 </Layout>
