--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,14 +2,6 @@
 import Footer from '../components/Footer.astro'
 import Header from '../components/Header.astro'
 import { SITE } from '../constants/site.js'
-
-const {
-  title = SITE.title,
-  description = SITE.description,
-  keywords = SITE.keywords,
-  url = SITE.url,
-  domain = SITE.domain
-} = Astro.props
 ---
 
 <!doctype html>
@@ -17,29 +9,29 @@ const {
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=5.0' />
-    <title>{title}</title>
+    <title>{SITE.title}</title>
     <meta name='author' content='dambdev' />
-    <meta name='description' content={description} />
-    <meta name='keywords' content={keywords} />
+    <meta name='description' content={SITE.description} />
+    <meta name='keywords' content={SITE.keywords} />
 
     <meta property='og:type' content='website' />
-    <meta property='og:url' content={url} />
-    <meta property='og:title' content={title} />
-    <meta property='og:description' content={description} />
-    <meta property='og:image' content={`${url}/social/og.webp`} />
+    <meta property='og:url' content={SITE.url} />
+    <meta property='og:title' content={SITE.title} />
+    <meta property='og:description' content={SITE.description} />
+    <meta property='og:image' content={`${SITE.url}/social/og.webp`} />
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='630' />
     <meta property='og:image:alt' content='Logo de Dambdev' />
 
     <meta name='twitter:card' content='summary_large_image' />
-    <meta property='twitter:domain' content={domain} />
-    <meta property='twitter:url' content={url} />
-    <meta name='twitter:title' content={title} />
-    <meta name='twitter:description' content={description} />
-    <meta name='twitter:image' content={`${url}/social/og.webp`} />
+    <meta property='twitter:domain' content={SITE.domain} />
+    <meta property='twitter:url' content={SITE.url} />
+    <meta name='twitter:title' content={SITE.title} />
+    <meta name='twitter:description' content={SITE.description} />
+    <meta name='twitter:image' content={`${SITE.url}/social/og.webp`} />
     <meta name='twitter:image:alt' content='Logo de Dambdev' />
 
-    <link rel='canonical' href={url} />
+    <link rel='canonical' href={SITE.url} />
     <link rel='manifest' href='/manifest.json' />
     <link rel='apple-touch-icon' sizes='180x180' href='/favicons/apple-touch-icon-180x180.png' />
     <link rel='icon' type='image/png' sizes='32x32' href='/favicons/favicon-32x32.png' />
