Actualiza la clase del botón en el componente Button.astro para incluir la propiedad 'transition-all', mejorando la animación y la experiencia visual al interactuar con el botón.

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,6 +1,6 @@
 <button
   {...Astro.props}
-  class='inline-flex items-center cursor-pointer gap-x-2 px-4 py-2 rounded-xl text-md transition bg-gray-100 dark:bg-gray-800 border border-gray-300 dark:border-gray-600/50 lg:hover:bg-gray-900 dark:lg:hover:bg-gray-100 lg:hover:text-white dark:lg:hover:text-black'
+  class='inline-flex items-center cursor-pointer gap-x-2 px-4 py-2 rounded-xl text-md transition-all bg-gray-100 dark:bg-gray-800 border border-gray-300 dark:border-gray-600/50 lg:hover:bg-gray-900 dark:lg:hover:bg-gray-100 lg:hover:text-white dark:lg:hover:text-black'
 >
   <slot />
 </button>
