--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,11 @@ import { navItems } from '../constants/navigation.js'
         </a>
       ))
     }
-    <button id='theme-toggle' class='cursor-pointer hover:text-blue-500 transition-all'>
+    <button
+      id='theme-toggle'
+      aria-label='Cambiar tema entre claro y oscuro'
+      class='cursor-pointer hover:text-blue-500 transition-all'
+    >
       <Moon class='dark:hidden size-5' />
       <Sun class='hidden dark:inline size-5' />
     </button>
@@ -32,7 +36,11 @@ import { navItems } from '../constants/navigation.js'
       id='mobile-menu'
       class='hidden peer-checked:flex flex-col items-end gap-4 px-4 pt-14 pb-4 text-sm font-semibold fixed top-0 right-0 shadow-md backdrop-blur-sm rounded-bl-xl'
     >
-      <button id='mobile-theme-toggle' class='cursor-pointer hover:text-blue-500 transition-all'>
+      <button
+        id='mobile-theme-toggle'
+        aria-label='Cambiar tema entre claro y oscuro'
+        class='cursor-pointer hover:text-blue-500 transition-all'
+      >
         <Moon class='dark:hidden size-7' />
         <Sun class='hidden dark:inline size-7' />
       </button>
