--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,12 +35,14 @@ import { SITE } from '../constants/site.js'
     <link rel='canonical' href={SITE.url} />
     <link rel='manifest' href='/manifest.json' />
     <link rel='apple-touch-icon' sizes='180x180' href='/favicons/apple-touch-icon-180x180.png' />
+    <link rel='icon' type='image/png' sizes='192x192' href='/favicons/android-icon-192x192.png' />
+    <link rel='icon' type='image/png' sizes='512x512' href='/favicons/android-icon-512x512.png' />
     <link rel='icon' type='image/png' sizes='32x32' href='/favicons/favicon-32x32.png' />
     <link rel='icon' type='image/png' sizes='16x16' href='/favicons/favicon-16x16.png' />
 
-    <meta name='msapplication-TileColor' content='#003' />
+    <meta name='msapplication-TileColor' content='#000033' />
     <meta name='msapplication-TileImage' content='/favicons/ms-icon-144x144.png' />
-    <meta name='theme-color' content='#003' />
+    <meta name='theme-color' content='#000033' />
     <meta name='color-scheme' content='dark light' />
     <meta name='generator' content={Astro.generator} />
   </head>
