--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,28 +22,28 @@ import '../styles/global.css'
     <SectionContainer id='experiencia'>
       <TitleSection>
         <BriefcaseIcon class='size-8' />
-        Experiencia técnica
+        Experiencia y trayectoria profesional
       </TitleSection>
       <Experience />
     </SectionContainer>
     <SectionContainer id='proyectos'>
       <TitleSection>
         <CodeIcon class='size-8' />
-        Proyectos
+        Proyectos destacados
       </TitleSection>
       <Projects />
     </SectionContainer>
     <SectionContainer id='sobre-mi'>
       <TitleSection>
         <ProfileCheckIcon class='size-8' />
-        Sobre mí
+        Sobre mí y habilidades
       </TitleSection>
       <AboutMe />
     </SectionContainer>
     <SectionContainer id='contacto'>
       <TitleSection>
         <MailIcon class='size-8' />
-        Contacto
+        Contáctame
       </TitleSection>
       <Contact />
     </SectionContainer>
