--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import MailIcon from '../icons/Mail.astro'
 ---
 
 <Badge>Disponible para trabajar</Badge>
-<h1 class='text-4xl lg:text-5xl my-8 font-bold'>Hola, soy dambdev</h1>
+<h1 class='text-4xl lg:text-5xl my-8 font-bold'>David Mirás (dambdev)</h1>
 <p class='text-xl mb-8 text-gray-800 dark:text-gray-300 max-w-md'>
   <strong class='text-blue-600 dark:text-yellow-400'>Desarrollador Web Full Stack</strong> de Coruña.
   Especializado en el desarrollo de aplicaciones web únicas e innovadoras.
