--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -3,7 +3,7 @@ import profileImage from '../assets/images/dambdev.webp'
 const personalImageAlt = 'Logo de DambDev'
 ---
 
-<article class='flex flex-col items-center gap-8 text-gray-700 dark:text-gray-300 lg:flex-row'>
+<article class='flex flex-col items-center gap-x-20 text-gray-700 dark:text-gray-300 lg:flex-row'>
   <div
     class='[&>p]:mb-4 [&>p>strong]:text-blue-500 dark:[&>p>strong]:text-yellow-500 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 lg:order-1'
   >
@@ -28,7 +28,7 @@ const personalImageAlt = 'Logo de DambDev'
     </p>
   </div>
   <img
-    class='hidden order-1 size-60 object-cover rounded-xl shadow-md shadow-black/50 lg:block'
+    class='hidden order-1 size-64 object-cover rounded-xl shadow-md shadow-black/50 lg:block'
     src={profileImage.src}
     alt={personalImageAlt}
   />
