--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -32,6 +32,7 @@ const personalImageAlt = 'Logo de DambDev'
   <img
     class='size-64 object-cover rounded-xl shadow-md shadow-black/50 order-1 lg:order-2 lg:mb-0 lg:group-hover:contrast-125 transition-all'
     src={profileImage.src}
+    loading='lazy'
     alt={personalImageAlt}
   />
 </article>
