Actualiza la información personal en varios archivos, cambiando "dambdev" por "David Mirás Bellón (dambdev)" en el LICENSE, manifest.json, Hero.astro, y site.js, mejorando la presentación y consistencia del autor en el proyecto.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import { SITE } from '../constants/site.js'
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=5.0' />
     <title>{SITE.title}</title>
-    <meta name='author' content='dambdev' />
+    <meta name='author' content='David Mirás Bellón (dambdev)' />
     <meta name='description' content={SITE.description} />
     <meta name='keywords' content={SITE.keywords} />
 
@@ -22,7 +22,7 @@ import { SITE } from '../constants/site.js'
     <meta property='og:image' content={`${SITE.url}/social/og.webp`} />
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='630' />
-    <meta property='og:image:alt' content='Logo de Dambdev' />
+    <meta property='og:image:alt' content='Logo de dambdev' />
 
     <meta name='twitter:card' content='summary_large_image' />
     <meta property='twitter:domain' content={SITE.domain} />
@@ -30,7 +30,7 @@ import { SITE } from '../constants/site.js'
     <meta name='twitter:title' content={SITE.title} />
     <meta name='twitter:description' content={SITE.description} />
     <meta name='twitter:image' content={`${SITE.url}/social/og.webp`} />
-    <meta name='twitter:image:alt' content='Logo de Dambdev' />
+    <meta name='twitter:image:alt' content='Logo de dambdev' />
 
     <link rel='canonical' href={SITE.url} />
     <link rel='manifest' href='/manifest.json' />
