Modifica el componente Experience.astro para cambiar la etiqueta de presentación de la empresa de un encabezado a un párrafo, mejorando la semántica y consistencia del contenido.

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -15,9 +15,9 @@ import { EXPERIENCE } from '../constants/experience.js'
               <h3 class='text-xl font-bold text-blue-500 dark:text-yellow-300'>
                 {experience.title}
               </h3>
-              <h4 class='font-semibold text-xl text-gray-600 dark:text-white'>
+              <p class='font-semibold text-xl text-gray-600 dark:text-white'>
                 {experience.company}
-              </h4>
+              </p>
               <time class='text-sm text-gray-600/80 dark:text-white/80'>{experience.date}</time>
             </div>
           </div>
