Modifica el componente Header.astro para mejorar la accesibilidad y la identificación de enlaces, actualizando las etiquetas aria y añadiendo identificadores únicos a los enlaces de navegación.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,12 @@ import { navItems } from '../constants/navigation.js'
   >
     {
       navItems.map(link => (
-        <a class='hover:text-blue-500 transition-all' aria-label={link.label} href={link.url}>
+        <a
+          class='hover:text-blue-500 transition-all'
+          aria-label={`Enlace a ${link.label}`}
+          href={link.url}
+          id={`desktop-${link.label}`}
+        >
           {link.title}
         </a>
       ))
@@ -48,8 +53,9 @@ import { navItems } from '../constants/navigation.js'
         navItems.map(link => (
           <a
             class='hover:text-blue-500 transition-all text-lg'
-            aria-label={link.label}
+            aria-label={`Enlace a ${link.label}`}
             href={link.url}
+            id={`mobile-${link.label}`}
           >
             {link.title}
           </a>
