Actualiza el componente Header.astro para ajustar la posición del botón de cambio de tema, mejorando su visibilidad y accesibilidad en la interfaz de usuario.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,7 +44,7 @@ import { navItems } from '../constants/navigation.js'
       <button
         id='mobile-theme-toggle'
         aria-label='Cambiar tema entre claro y oscuro'
-        class='cursor-pointer hover:text-blue-500 transition-all'
+        class='cursor-pointer hover:text-blue-500 transition-all absolute top-4 left-3'
       >
         <Moon class='dark:hidden size-7' />
         <Sun class='hidden dark:inline size-7' />
