Actualiza el componente Experience.astro para mejorar la estructura semántica, reemplazando etiquetas div por article y header, y ajusta la presentación de la descripción para dividirla en párrafos. Además, se actualizan las descripciones de las experiencias en experience.js, proporcionando detalles más específicos sobre los proyectos y habilidades adquiridas.

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,8 +6,8 @@ import { EXPERIENCE } from '../constants/experience.js'
   {
     EXPERIENCE.map(experience => (
       <li>
-        <div class="relative ml-12 pb-16 grid before:absolute before:left-[-33px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] lg:grid-cols-5 gap-x-4]">
-          <div class='pb-8 lg:col-span-2'>
+        <article class="relative ml-12 pb-16 grid before:absolute before:left-[-33px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] lg:grid-cols-5 gap-x-4]">
+          <header class='pb-8 lg:col-span-2'>
             <div class='sticky top-0'>
               <span class='text-blue-500 dark:text-yellow-300 -left-[42px] -top-[14px] absolute rounded-full text-5xl'>
                 &bull;
@@ -20,11 +20,13 @@ import { EXPERIENCE } from '../constants/experience.js'
               </p>
               <time class='text-sm text-gray-600/80 dark:text-white/80'>{experience.date}</time>
             </div>
-          </div>
-          <div class='flex flex-col gap-y-2 text-gray-600 dark:text-gray-300 lg:col-span-3'>
-            {experience.description}
-          </div>
-        </div>
+          </header>
+          <section class='flex flex-col gap-y-2 text-gray-600 dark:text-gray-300 lg:col-span-3'>
+            {experience.description.split('\n').map(line => (
+              <p>{line}</p>
+            ))}
+          </section>
+        </article>
       </li>
     ))
   }
