--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,7 +10,11 @@ import LinkButton from './LinkButton.astro'
     PROJECTS.map(project => (
       <li class='mb-16'>
         <article class='group'>
-          <h3 class='text-2xl mb-4 font-bold text-gray-600 dark:text-gray-300'>{project.title}</h3>
+          <header>
+            <h3 class='text-2xl mb-4 font-bold text-gray-600 dark:text-gray-300'>
+              {project.title}
+            </h3>
+          </header>
           <div class='flex flex-col lg:flex-row gap-y-8 lg:gap-y-0 lg:gap-x-8'>
             <img
               alt={`Imagen del proyecto ${project.title}`}
@@ -18,34 +22,33 @@ import LinkButton from './LinkButton.astro'
               loading='lazy'
               src={project.image.src}
             />
-            <div>
-              <div class='flex flex-wrap'>
-                <ul class='flex gap-x-4 w-full'>
-                  {project.tags.map(tag => (
-                    <li>
-                      <span class='flex rounded-xl bg-gray-100 dark:bg-gray-800 p-3'>
-                        <tag.icon class='size-6' />
-                      </span>
-                    </li>
-                  ))}
-                </ul>
-                <p class='my-8 text-gray-700 dark:text-gray-400 w-full'>{project.description}</p>
-                <footer class='flex gap-x-4'>
-                  {project.github && (
-                    <LinkButton href={project.github} icon={GitHubIcon}>
-                      <GitHubIcon class='size-4' />
-                      Código
-                    </LinkButton>
-                  )}
-                  {project.link && (
-                    <LinkButton href={project.link} icon={LinkIcon}>
-                      <LinkIcon class='size-4' />
-                      Ver
-                    </LinkButton>
-                  )}
-                </footer>
-              </div>
-            </div>
+            <section>
+              <ul class='flex gap-x-4 w-full' aria-label='Tecnologías utilizadas'>
+                {project.tags.map(tag => (
+                  <li>
+                    <span class='flex rounded-xl bg-gray-100 dark:bg-gray-800 p-3'>
+                      <tag.icon class='size-6' aria-hidden='true' />
+                      <span class='sr-only'>Tecnología utilizada</span>
+                    </span>
+                  </li>
+                ))}
+              </ul>
+              <p class='my-8 text-gray-700 dark:text-gray-400'>{project.description}</p>
+              <footer class='flex gap-x-4'>
+                {project.github && (
+                  <LinkButton href={project.github} icon={GitHubIcon}>
+                    <GitHubIcon class='size-4' aria-hidden='true' />
+                    Código
+                  </LinkButton>
+                )}
+                {project.link && (
+                  <LinkButton href={project.link} icon={LinkIcon}>
+                    <LinkIcon class='size-4' aria-hidden='true' />
+                    Ver
+                  </LinkButton>
+                )}
+              </footer>
+            </section>
           </div>
         </article>
       </li>
