--- a/src/components/TitleSection.astro
+++ b/src/components/TitleSection.astro
@@ -1,3 +1,3 @@
-<h2 class={`flex items-center mb-12 text-3xl font-semibold gap-x-4 ${Astro.props.className}`}>
+<h2 class='flex items-center mb-12 text-3xl font-semibold gap-x-4'>
   <slot />
 </h2>
