--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,22 +6,16 @@ import { EXPERIENCE } from '../constants/experience.js'
   {
     EXPERIENCE.map(experience => (
       <li>
-        <article class="relative ml-12 pb-16 grid before:absolute before:left-[-33px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] lg:grid-cols-5 gap-x-4]">
-          <header class='pb-8 lg:col-span-2'>
-            <div class='sticky top-0'>
-              <span class='text-blue-500 dark:text-yellow-300 -left-[42px] -top-[14px] absolute rounded-full text-5xl'>
-                &bull;
-              </span>
-              <h3 class='text-xl font-bold text-blue-500 dark:text-yellow-300'>
-                {experience.title}
-              </h3>
-              <p class='font-semibold text-xl text-gray-600 dark:text-white'>
-                {experience.company}
-              </p>
-              <time class='text-sm text-gray-600/80 dark:text-white/80'>{experience.date}</time>
-            </div>
+        <article class="relative ml-12 pb-16 grid before:absolute before:left-[-33px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] lg:grid-cols-5 gap-x-4">
+          <header class='pb-8 lg:pb-0 lg:col-span-2'>
+            <span class='text-blue-500 dark:text-yellow-300 -left-[42px] -top-[14px] absolute rounded-full text-5xl'>
+              &bull;
+            </span>
+            <h3 class='text-xl font-bold text-blue-500 dark:text-yellow-300'>{experience.title}</h3>
+            <p class='font-semibold text-xl text-gray-600 dark:text-white'>{experience.company}</p>
+            <time class='text-sm text-gray-600/80 dark:text-white/80'>{experience.date}</time>
           </header>
-          <section class='flex flex-col gap-y-2 text-gray-600 dark:text-gray-300 lg:col-span-3'>
+          <section class='flex flex-col text-gray-600 dark:text-gray-300 lg:col-span-3 [&>p:not(:last-child)]:mb-4'>
             {experience.description.split('\n').map(line => (
               <p>{line}</p>
             ))}
