Actualiza el componente Header.astro para ajustar la clase del menú móvil, mejorando la presentación y la disposición de los elementos en la interfaz de usuario.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,7 +39,7 @@ import { navItems } from '../constants/navigation.js'
     </label>
     <nav
       id='mobile-menu'
-      class='hidden peer-checked:flex flex-col items-end gap-4 px-4 pt-14 pb-4 text-sm font-semibold fixed top-0 right-0 shadow-md backdrop-blur-sm rounded-bl-xl'
+      class='hidden peer-checked:flex flex-col items-end gap-4 pl-12 pr-4 pt-14 text-sm font-semibold fixed top-0 bottom-0 right-0 backdrop-blur-sm'
     >
       <button
         id='mobile-theme-toggle'
