Actualiza el encabezado en index.astro, cambiando el texto de "Experiencia y trayectoria profesional" a "Experiencia técnica" para reflejar mejor el contenido de la sección.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import '../styles/global.css'
     <SectionContainer id='experiencia'>
       <TitleSection>
         <BriefcaseIcon class='size-8' />
-        Experiencia y trayectoria profesional
+        Experiencia técnica
       </TitleSection>
       <Experience />
     </SectionContainer>
