Actualiza el componente Hero.astro para ajustar la clase de navegación, eliminando un guion bajo en la propiedad gap, lo que mejora la consistencia en el diseño del componente.

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@ import MailIcon from '../icons/Mail.astro'
   <strong class='text-blue-600 dark:text-yellow-400'>Desarrollador Web Full Stack</strong> de Coruña.
   Especializado en el desarrollo de aplicaciones web únicas e innovadoras.
 </p>
-<nav class='flex flex-wrap gap-x-4'>
+<nav class='flex flex-wrap gap-4'>
   <SocialPill href='/#contacto'>
     <MailIcon class='size-4' />
     Contáctame
