Actualiza el componente Footer.astro, cambiando la dirección de correo electrónico y el texto asociado para reflejar la nueva dirección de contacto, mejorando la precisión de la información de contacto.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,10 +14,10 @@ import PhoneIcon from '../icons/Phone.astro'
     <span>680367798</span>
   </a>
   <a
-    href='mailto:david_miras@icloud.com'
+    href='mailto:dambdev@icloud.com'
     class='hover:text-blue-700 dark:hover:text-blue-300 flex items-center gap-1'
   >
     <MailIcon class='size-5 stroke-1' />
-    <span>David_Miras@iCloud.com</span>
+    <span>dambdev@icloud.com</span>
   </a>
 </footer>
